Prevent dividers from overflowing the component container

--- a/src/components/split-me/split-me.css
+++ b/src/components/split-me/split-me.css
@@ -67,6 +67,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .slots-container-h {
